# HCMR_Minimization_App

./: .gitignore  CMakeLists.txt  README.md  create_project.bat  deploy.bat  main.cpp
Docs/: MC-FSA.docx
Docs/Codes/: EXECUTABLE_4FSA_MINUIT.bat  EXECUTE_conv.bat  EXECUTE_rebin.bat  convolve.f  minuita.for  minuitb.for  minuitc.for  minuitd.for  minuitne.for  rebinning.for  sumFCN.for
Docs/Example Files/: Bi  K  K.txt  Kc  Kcr  Pb  Tl  katK40
Extra/: testRandom100.csv
Sources/: MyQtListener.cpp  MyQtListener.h  QTPlotter.cpp  QTPlotter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h
Sources/common/: MyQTPlot.cpp  MyQTPlot.h  QTPlotter.cpp  QTPlotter.h  qcustomplot.cpp
Sources/data/: MyQtData.cpp  MyQtData.h  MyQtDataConfig.cpp  MyQtDataConfig.h
SubProjects/HCMRMinimizationLib/: CMakeLists.txt  HCMRConfig.cpp  HCMRConfig.h  HCMRData.cpp  HCMRData.h  HCMRFitManager.cpp  HCMRFitManager.h  HCMRMinimization.cpp  HCMRMinimization.h  HCMRModel.cpp  HCMRModel.h  HCMRParser.cpp  HCMRParser.h  HCMRPeakFinder.cpp  HCMRPeakFinder.h  HCMRPeekFinder.cpp  HCMRPeekFinder.h  HCMRSpectrum.cpp  HCMRSpectrum.h  HCMRUnitaryInput.h  IHCMRListener.h  IPlotter.h  common_definitions.h
SubProjects/logger/: CMakeLists.txt  loguru.cpp
SubProjects/test/: CMakeLists.txt  MyTest.cpp
libs/HCMRMinimizationLib/: CMakeLists.txt
test/: CMakeLists.txt
